# backend-libs-opentalk-types

./: .gitignore  .gitlab-ci.yml  .markdown_style.rb  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  README.md  REUSE.toml  deny.toml  justfile  renovate.json
crates/kustos-shared/: Cargo.toml  README.md
crates/kustos-shared/src/: access.rs  lib.rs  resource.rs  subject.rs
crates/kustos-shared/src/internal/: impls.rs  mod.rs
crates/opentalk-client-shared/: Cargo.toml  README.md
crates/opentalk-client-shared/src/: api.rs  api_error.rs  authorization.rs  data_option.rs  lib.rs
crates/opentalk-client-shared/src/client/: mod.rs  rest_client.rs
crates/opentalk-client-shared/src/request/: authorized.rs  mod.rs  with_authorization.rs
crates/opentalk-kustos-prefix/: Cargo.toml
crates/opentalk-kustos-prefix-impl/: Cargo.toml  README.md
crates/opentalk-kustos-prefix-impl/src/: lib.rs
crates/opentalk-kustos-prefix/src/: lib.rs
crates/opentalk-mail-worker-protocol/: Cargo.toml  gitlab-ci.yml
crates/opentalk-mail-worker-protocol/src/: lib.rs
crates/opentalk-mail-worker-protocol/src/v1/: invites.rs  mod.rs
crates/opentalk-types-api-common/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-api-common/src/: lib.rs  result.rs
crates/opentalk-types-api-common/src/error/: api_error.rs  error_body.rs  mod.rs  validation_error_entry.rs
crates/opentalk-types-api-common/src/module_assets/: mod.rs
crates/opentalk-types-api-common/src/pagination/: cursor.rs  cursor_pagination.rs  mod.rs  page_pagination.rs  page_pagination_query.rs  paged_api_response.rs  paging_link_header.rs
crates/opentalk-types-api-common/src/users/: mod.rs
crates/opentalk-types-api-internal/: Cargo.toml
crates/opentalk-types-api-internal/src/: call_in.rs  error.rs  lib.rs  recording.rs  users.rs
crates/opentalk-types-api-internal/src/module_assets/: mod.rs  post_asset_response_body.rs  quota.rs
crates/opentalk-types-api-internal/src/module_resources/: filter.rs  mod.rs  module_resource.rs  new_module_resource.rs  (+1 more)
crates/opentalk-types-api-v1/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-api-v1/src/: cursor.rs  lib.rs
crates/opentalk-types-common/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-common-identifiers/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-common-identifiers/src/: asset_file_kind.rs  feature_id.rs  identifier.rs  lib.rs  module_id.rs
crates/opentalk-types-common-macros/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-common-macros/src/: lib.rs
crates/opentalk-types-common/src/: lib.rs  modules.rs
crates/opentalk-types-common/tests/: compile_asset_file_kind.rs  compile_feature_id.rs  compile_module_id.rs
crates/opentalk-types-signaling/: Cargo.toml  gitlab-ci.yml
crates/opentalk-types-signaling-automod/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-automod/src/: lib.rs  state.rs
crates/opentalk-types-signaling-breakout/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-breakout/src/: associated_participant_in_other_room.rs  breakout_room.rs  lib.rs  participant_in_other_room.rs
crates/opentalk-types-signaling-chat/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-chat/src/: lib.rs  message_id.rs  scope.rs
crates/opentalk-types-signaling-control/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-control/src/: lib.rs  waiting_room_state.rs
crates/opentalk-types-signaling-e2ee/: Cargo.toml  README.md
crates/opentalk-types-signaling-e2ee/src/: lib.rs
crates/opentalk-types-signaling-legal-vote/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-legal-vote/src/: invalid.rs  lib.rs  parameters.rs  state.rs  tally.rs  token.rs
crates/opentalk-types-signaling-livekit/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-livekit/src/: credentials.rs  lib.rs  microphone_restriction_state.rs
crates/opentalk-types-signaling-meeting-report/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-meeting-report/src/: command.rs  lib.rs
crates/opentalk-types-signaling-moderation/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-moderation/src/: kick_scope.rs  lib.rs
crates/opentalk-types-signaling-polls/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-polls/src/: choice.rs  choice_id.rs  item.rs  lib.rs  poll_id.rs  results.rs
crates/opentalk-types-signaling-recording/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-recording-service/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-recording-service/src/: lib.rs
crates/opentalk-types-signaling-recording/src/: lib.rs  recording_id.rs  stream_error_reason.rs  stream_kind.rs  stream_kind_secret.rs  stream_status.rs  stream_target.rs  stream_target_secret.rs  stream_updated.rs
crates/opentalk-types-signaling-shared-folder/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-shared-folder/src/: event.rs  lib.rs
crates/opentalk-types-signaling-subroom-audio/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-subroom-audio/src/: lib.rs  whisper_id.rs
crates/opentalk-types-signaling-timer/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-timer/src/: kind.rs  lib.rs  timer_config.rs  timer_id.rs
crates/opentalk-types-signaling-transcription/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-transcription/src/: command.rs  http.rs  lib.rs  segment.rs  state.rs
crates/opentalk-types-signaling-whiteboard/: Cargo.toml  README.md  gitlab-ci.yml
crates/opentalk-types-signaling-whiteboard/src/: lib.rs
crates/opentalk-types-signaling/src/: associated_participant.rs  leave_reason.rs  lib.rs  module_data.rs  module_peer_data.rs  namespaced_command.rs  namespaced_event.rs  participant.rs  participant_id.rs  participation_kind.rs  participation_visibility.rs  role.rs  signaling_module_frontend_data.rs  signaling_module_peer_frontend_data.rs  target_participant.rs
(+539 files in other folders)
