# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/libs/opentalk-types"
version = "0.30.0-alpha"

[workspace.dependencies]
kustos-shared = { path = "crates/kustos-shared", version = "0.30.0-alpha" }
opentalk-client-shared = { path = "crates/opentalk-client-shared", version = "0.30.0-alpha" }
opentalk-kustos-prefix = { path = "crates/opentalk-kustos-prefix", version = "0.30.0-alpha" }
opentalk-kustos-prefix-impl = { path = "crates/opentalk-kustos-prefix-impl", version = "0.30.0-alpha" }
opentalk-types = { path = "crates/opentalk-types", version = "0.30.0-alpha" }
opentalk-types-api-v1 = { path = "crates/opentalk-types-api-v1", version = "0.30.0-alpha" }
opentalk-types-common = { path = "crates/opentalk-types-common", version = "0.30.0-alpha" }
opentalk-types-signaling = { path = "crates/opentalk-types-signaling", version = "0.30.0-alpha" }
opentalk-types-signaling-breakout = { path = "crates/opentalk-types-signaling-breakout", version = "0.30.0-alpha" }
opentalk-types-signaling-chat = { path = "crates/opentalk-types-signaling-chat", version = "0.30.0-alpha" }
opentalk-types-signaling-control = { path = "crates/opentalk-types-signaling-control", version = "0.30.0-alpha" }
opentalk-types-signaling-livekit = { path = "crates/opentalk-types-signaling-livekit", version = "0.30.0-alpha" }
opentalk-types-signaling-meeting-notes = { path = "crates/opentalk-types-signaling-meeting-notes", version = "0.30.0-alpha" }
opentalk-types-signaling-meeting-report = { path = "crates/opentalk-types-signaling-meeting-report", version = "0.30.0-alpha" }
opentalk-types-signaling-moderation = { path = "crates/opentalk-types-signaling-moderation", version = "0.30.0-alpha" }
opentalk-types-signaling-polls = { path = "crates/opentalk-types-signaling-polls", version = "0.30.0-alpha" }
opentalk-types-signaling-recording = { path = "crates/opentalk-types-signaling-recording", version = "0.30.0-alpha" }
opentalk-types-signaling-recording-service = { path = "crates/opentalk-types-signaling-recording-service", version = "0.30.0-alpha" }
opentalk-types-signaling-shared-folder = { path = "crates/opentalk-types-signaling-shared-folder", version = "0.30.0-alpha" }
opentalk-types-signaling-subroom-audio = { path = "crates/opentalk-types-signaling-subroom-audio", version = "0.30.0-alpha" }
opentalk-types-signaling-timer = { path = "crates/opentalk-types-signaling-timer", version = "0.30.0-alpha" }
opentalk-types-signaling-whiteboard = { path = "crates/opentalk-types-signaling-whiteboard", version = "0.30.0-alpha" }

actix-http = "3"
actix-web-httpauth = "0.8"
async-trait = "0.1"
base64 = "0.22"
bincode = "1"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
derive_more = "1.0"
diesel = "2"
email_address = "0.2.4"
http = "1"
http-request-derive = { version = "0.3.1", default-features = false }
itertools = "0.14"
opentalk-diesel-newtype = "0.13"
pretty_assertions = "1"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
redis = "0.28"
redis-args = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3.8"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
syn = "2"
url = "2"
utoipa = "5"
uuid = "1"

[workspace.lints.clippy]
self_named_module_files = "deny"
