# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/libs/opentalk-types"

[workspace.dependencies]
opentalk-mail-worker-protocol = { path = "crates/opentalk-mail-worker-protocol", version = "0.43.0" }
opentalk-types = { path = "crates/opentalk-types", version = "0.67" }
opentalk-types-api-common = { path = "crates/opentalk-types-api-common", version = "0.7" }
opentalk-types-api-internal = { path = "crates/opentalk-types-api-internal", version = "0.2.1" }
opentalk-types-api-v1 = { path = "crates/opentalk-types-api-v1", version = "0.59" }
opentalk-types-common = { path = "crates/opentalk-types-common", version = "0.44" }
opentalk-types-common-identifiers = { path = "crates/opentalk-types-common-identifiers", version = "0.34.0" }
opentalk-types-common-macros = { path = "crates/opentalk-types-common-macros", version = "0.33.0" }
opentalk-types-signaling = { path = "crates/opentalk-types-signaling", version = "0.45" }

actix-http = "3"
actix-web = "4"
actix-web-httpauth = "0.8"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
derive_more = "2.0"
diesel = "2"
email_address = "0.2.4"
http = "1"
http0 = { version = "0.2", package = "http" }
icu_locid = "1"
itertools = "0.14"
log = "0.4"
opentalk-diesel-newtype = "0.13"
postcard = "1.1.3"
pretty_assertions = "1"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
redis = "1.0"
redis-args = "0.22.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3.8"
snafu = "0.9"
strum = { version = "0.28", features = ["derive"] }
syn = "2"
trybuild = "1"
ts-rs = { version = "12", features = ["chrono-impl", "uuid-impl"] }
url = "2"
utoipa = "5"
uuid = "1"

[workspace.lints.clippy]
self_named_module_files = "deny"
