# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Shared types for kustos"
documentation = "https://docs.rs/kustos-shared"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "kustos-shared"
publish = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http.workspace = true
itertools = { workspace = true, optional = true }
snafu.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
internal = ["dep:itertools"]

[dev-dependencies]
pretty_assertions.workspace = true
