# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Shared types for kustos"
documentation = "https://docs.rs/kustos-shared"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "kustos-shared"
publish = true
repository.workspace = true
version = "0.33.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
http.workspace = true
itertools = { workspace = true, optional = true }
snafu.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
internal = ["dep:itertools"]

[dev-dependencies]
pretty_assertions.workspace = true
