# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Types and traits that are used by the OpenTalk client library crate"
documentation = "https://docs.rs/opentalk-client-shared"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-client-shared"
publish = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
derive_more = { workspace = true, features = ["from", "into"] }
http.workspace = true
http-request-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
url.workspace = true

[features]

[dev-dependencies]
