# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Derive macro for defining kustos prefix - proc-macro implementation"
documentation = "https://docs.rs/opentalk-kustos-prefix-impl"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-kustos-prefix-impl"
publish = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
