# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Derive macro for defining kustos prefix"
documentation = "https://docs.rs/opentalk-kustos-prefix"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-kustos-prefix"
publish = true
repository.workspace = true
version = "0.33.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
kustos-shared.workspace = true
opentalk-kustos-prefix-impl.workspace = true
