# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk API internal data types"
documentation = "https://docs.rs/opentalk-types-api-internal"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-internal-api"
publish = true
repository.workspace = true
version = "0.0.1"
