# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk API internal data types"
documentation = "https://docs.rs/opentalk-types-api-internal"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-api-internal"
publish = true
repository.workspace = true
version = "0.2.0"

[features]
utoipa = ["dep:utoipa", "opentalk-types-common/utoipa"]

[dependencies]
opentalk-types-common = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
utoipa = { workspace = true, optional = true }
