# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk API internal data types"
documentation = "https://docs.rs/opentalk-types-api-internal"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-api-internal"
publish = true
repository.workspace = true
version = "0.2.0"

[features]
axum = ["opentalk-types-api-common/axum"]
http = ["opentalk-types-api-common/http"]
typescript = ["dep:ts-rs"]
utoipa = [
  "dep:utoipa",
  "opentalk-types-api-common/utoipa",
  "opentalk-types-common/utoipa",
]

[dependencies]
chrono.workspace = true
opentalk-types-api-common = { workspace = true, features = ["serde"] }
opentalk-types-common = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
ts-rs = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
