# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk API v1 data types"
documentation = "https://docs.rs/opentalk-types-api-v1"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-api-v1"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = ["diesel", "opentalk-types-common/backend", "serde", "utoipa"]
diesel = ["opentalk-types-common/diesel"]
frontend = ["opentalk-types-common/frontend", "serde"]
serde = [
  "chrono-tz/serde",
  "chrono/serde",
  "dep:base64",
  "dep:bincode",
  "dep:serde",
  "dep:serde_with",
  "opentalk-types-common/serde",
]
utoipa = [
  "dep:serde_json",
  "dep:utoipa",
  "opentalk-types-common/utoipa",
  "serde",
]

[dependencies]
base64 = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
chrono.workspace = true
chrono-tz.workspace = true
derive_more = { workspace = true, features = [
  "as_ref",
  "deref",
  "deref_mut",
  "from",
  "into",
] }
opentalk-types-common.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
url.workspace = true
utoipa = { workspace = true, features = [
  "chrono",
  "url",
  "uuid",
], optional = true }

[package.metadata.cargo-machete]
ignored = [
  # Required by `utoipa::ToSchema`, not detected by compiler
  "serde_json",
]

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
