# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Macros for opentalk-types-common"
documentation = "https://docs.rs/opentalk-types-common-macros"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-common-macros"
publish = true
repository.workspace = true
version = "0.33.0"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
opentalk-types-common-identifiers.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
