# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk automod module"
documentation = "https://docs.rs/opentalk-types-signaling-automod"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-automod"
publish = true
repository.workspace = true
version = "0.11.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
backend = ["serde"]
frontend = ["serde"]
serde = [
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
