# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk chat module"
documentation = "https://docs.rs/opentalk-types-signaling-chat"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-chat"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = [
  "opentalk-types-common/backend",
  "opentalk-types-signaling/backend",
  "rand",
  "redis",
  "serde",
]
frontend = [
  "opentalk-types-common/frontend",
  "opentalk-types-signaling/frontend",
  "serde",
]
rand = [
  "opentalk-types-common/rand",
  "opentalk-types-signaling/rand",
  "uuid/v4",
]
redis = [
  "dep:redis-args",
  "opentalk-types-common/redis",
  "opentalk-types-signaling/redis",
  "serde",
]
serde = [
  "chrono/serde",
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
  "uuid/serde",
]

[dependencies]
derive_more = { workspace = true, features = [
  "as_ref",
  "display",
  "from",
  "from_str",
  "into",
] }
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
redis-args = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
