# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk control module"
documentation = "https://docs.rs/opentalk-types-signaling-control"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-control"
publish = true
repository.workspace = true
version.workspace = true


[features]
backend = ["redis", "serde"]
frontend = ["serde"]
redis = [
  "dep:redis-args",
  "opentalk-types-common/redis",
  "opentalk-types-signaling/redis",
  "serde",
]
serde = [
  "dep:serde",
  "dep:serde_json",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
redis-args = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
chrono.workspace = true
pretty_assertions.workspace = true
