# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk e2ee module"
edition = "2024"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-e2ee"
publish = true
repository.workspace = true
version = "0.12.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
backend = ["serde"]
frontend = ["serde"]
serde = ["bytes/serde", "dep:serde", "opentalk-types-signaling/serde"]

[dependencies]
bytes.workspace = true
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde = { workspace = true, optional = true }
