# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk livekit module"
documentation = "https://docs.rs/opentalk-types-signaling-livekit"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-livekit"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = ["serde"]
frontend = ["serde"]
serde = [
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde = { workspace = true, optional = true }

[lints]
workspace = true
