# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk moderation module"
documentation = "https://docs.rs/opentalk-types-signaling-moderation"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-moderation"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = [
  "opentalk-types-common/backend",
  "opentalk-types-signaling/backend",
  "serde",
]
frontend = [
  "opentalk-types-common/frontend",
  "opentalk-types-signaling/frontend",
  "serde",
]
serde = [
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
