# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk polls module"
documentation = "https://docs.rs/opentalk-types-signaling-polls"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-polls"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = ["rand", "redis", "serde"]
frontend = ["serde"]
rand = ["uuid/v4"]
redis = ["dep:redis-args", "serde"]
serde = [
  "chrono/serde",
  "dep:opentalk-types-signaling",
  "dep:serde",
  "opentalk-types-common/serde",
  "uuid/serde",
]


[dependencies]
chrono.workspace = true
derive_more = { workspace = true, features = [
  "as_ref",
  "display",
  "from",
  "from_str",
  "into",
] }
opentalk-types-common.workspace = true
opentalk-types-signaling = { workspace = true, features = [
  "serde",
], optional = true }
redis-args = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
